--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-<link rel="stylesheet" type="text/css" href="poker.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 
 <head id="head">
     <p id="title"><b>Play Texas Holdem</b></p>
@@ -41,4 +41,4 @@
     </div>
 </body>
 
-<script src="poker.js"></script>
+<script src="index.js"></script>
