--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <p id="input" type="text"><b>Place Your Bet</b></p>
             <input id="bet">
             <input id="submit" type="submit" value="Submit">
+            <div id="bag"><b>Your purse:</b></div>
+            <div id="purse">$500</div>
         </form>
         <div id="playArea">
             <div id="playCards">
