--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="index.css">
 
 <head id="head">
     <p id="title"><b>Play Texas Holdem</b></p>
-    <p id="ante"><b>Ante Up</b></p>
+    <p id="ante"><br><b>Ante Up</b></p>
 </head>
 
-<body>
+<body onload="bet()">
     <!--
     <div id="banner">
         <p id="closeButton" onclick="hideBanner()">X</p>
@@ -22,7 +23,7 @@
             <input id="bet">
             <input id="submit" type="submit" value="Submit">
             <div id="bag"><b>Your purse:</b></div>
-            <div id="purse">$500</div>
+            <div id="purse"></div>
         </form>
         <div id="playArea">
             <div id="playCards">
