--- a/index.html
+++ b/index.html
@@ -3,46 +3,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="index.css">
 
-<head id="head">
-    <p id="title"><b>Play Texas Holdem</b></p>
-    <p id="ante"><br><b>Ante Up</b></p>
-</head>
-
-<body onload="bet()">
-    <!--
-    <div id="banner">
-        <p id="closeButton" onclick="hideBanner()">X</p>
-        <div id="bannerText">Play Texas Holdem</div>
+<div id="two">
+    <button class="deal" onclick="deal()">Deal</button><br>
+    <img id="table" src="Table.png">
+</div>
+<br>
+<div id="one">
+    <button style=" cursor: pointer;" onclick="newHand()" class="deal" id="firstDeal">New Hand</button><br>
+    <div class="cards" id="bothCards">
+        <img class="card" id="S1" src="SPADE-1.svg">
+        <img class="card" id="S2" src="SPADE-2.svg">
     </div>
-    -->
+</div>
 
-    <div id="main">
-        <button onclick="buttonClick()" id="deal">Deal</button>
 
-        <form id="enter">
-            <p id="input" type="text"><b>Place Your Bet</b></p>
-            <input id="bet">
-            <input id="submit" type="submit" value="Submit">
-            <div id="bag"><b>Your purse:</b></div>
-            <div id="purse"></div>
-        </form>
-        <div id="playArea">
-            <div id="playCards">
-                <button onclick="newHand()" id="done">New Hand</button>
-                <div id="both">
-                    <div class="players">
-                    </div>
-                    <div class="cards" id="bothCards">
-                        <img class="card" id="S1" src="SPADE-1.svg">
-                        <img class="card" id="S2" src="SPADE-2.svg">
-                    </div>
-                </div>
-            </div>
-            <div class="table">
-                <img id="table" src="Table.png">
-            </div>
-        </div>
-    </div>
 </body>
 
 <script src="index.js"></script>
