--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="index.css">
-
+<div id="intro"><b>Play Texas Holdem</b></div>
 <div id="two">
     <button class="deal" onclick="deal()">Deal</button><br>
     <img id="table" src="Table.png">
