--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 <div id="intro"><b>Play Texas Holdem</b></div>
 <div id="two">
-    <button class="deal" onclick="deal()">Deal</button><br>
+    <button class="deal" id="firstDealButton" onclick="deal()">Deal</button><br>
     <img id="table" src="Table.png">
 </div>
 <br>
