--- a/index copy.html
+++ b/index copy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="index.css">-->
+<link rel="stylesheet" type="text/css" href="index.css">
 
 
 <body onload="bet()" style=" background: linear-gradient(#6498e6, #19334f);">
@@ -31,8 +31,8 @@
                     <div class="players">
                     </div>
                     <div class="cards" id="bothCards">
-                        <img class="card" id="S1" src="SPADE-1.svg">
-                        <img class="card" id="S2" src="SPADE-2.svg">
+                        <img class="card" id="j1" src="JOKER-1.svg">
+                        <img class="card" id="j2" src="JOKER-2.svg">
                     </div>
                 </div>
             </div>
